<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="240dp"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/menu_bg"
        android:orientation="vertical" >

        <TextView
            style="@style/menu_text"
            android:background="#2a6c"
            android:drawableLeft="@drawable/tab_news"
            android:text="@string/slide_news" />

        <TextView
            style="@style/menu_text"
            android:drawableLeft="@drawable/tab_read"
            android:text="@string/slide_read" />

        <TextView
            style="@style/menu_text"
            android:drawableLeft="@drawable/tab_ties"
            android:text="@string/slide_ties" />

        <TextView
            style="@style/menu_text"
            android:drawableLeft="@drawable/tab_pics"
            android:text="@string/slide_pics" />

        <TextView
            style="@style/menu_text"
            android:drawableLeft="@drawable/tab_ugc"
            android:text="@string/slide_ugc" />

        <TextView
            style="@style/menu_text"
            android:drawableLeft="@drawable/tab_vote"
            android:text="@string/slide_vote" />

        <TextView
            style="@style/menu_text"
            android:drawableLeft="@drawable/tab_focus"
            android:text="@string/slide_focus" />
    </LinearLayout>

</ScrollView>